name:                dark-sky
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/peterstuart/dark-sky
license:             BSD3
license-file:        LICENSE
author:              Peter Stuart
maintainer:          peter.l.stuart@gmail.com
copyright:           2016 Peter Stuart
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DarkSky
                     , DarkSky.Client
                     , DarkSky.Request
                     , DarkSky.Request.BlockType
                     , DarkSky.Response
                     , DarkSky.Response.Alert
                     , DarkSky.Response.DataBlock
                     , DarkSky.Response.DataPoint
                     , DarkSky.Response.Flags
                     , DarkSky.Response.Icon
                     , DarkSky.Response.PrecipitationType
                     , DarkSky.Types
                     , DarkSky.Unit
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , http-conduit
                     , scientific
                     , text
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall

executable dark-sky-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dark-sky
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite dark-sky-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , dark-sky
                     , hspec
                     , raw-strings-qq
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       AlertSpec
                     , BlockTypeSpec
                     , DataBlockSpec
                     , DataPointSpec
                     , FlagsSpec
                     , IconSpec
                     , ResponseSpec
                     , RequestSpec
                     , PrecipitationTypeSpec
                     , UnitSpec

source-repository head
  type:     git
  location: https://github.com/peterstuart/dark-sky
